--- a/demo/src/main/resources/front/index.html
+++ b/demo/src/main/resources/front/index.html
@@ -74,10 +74,10 @@
         <el-row>
           <el-input
               placeholder="请输入源ID"
-              v-model="username">
+              v-model="username" :disabled="disabled">
           </el-input>
           <div style="margin-top: 20px;margin-left: 75px;">
-            <el-button v-on:click="connect()" type="success" :disabled="disabled">连接</el-button>
+            <el-button v-on:click="clickConnect()" type="success" :disabled="disabled">连接</el-button>
           </div>
         </el-row>
       </div>
@@ -118,6 +118,7 @@
   </div>
 </div>
 
+<script src="./js/base.js"></script>
 <script src="./plugins/vue/vue.js"></script>
 <script src="./plugins/axios/axios.min.js"></script>
 <script src="./plugins/element-ui/index.js"></script>
@@ -161,11 +162,17 @@
         sendMsgSyncApi(msg).then((res) => {
           console.log(res)
           loading.close();
-          res = res.data.data
+          res = res.data;//r
+          let res_message = res.data;
           if (res.msg === "timeout") {
             that.$notify.error({
               title: '错误',
               message: '对方回复超时'
+            });
+          }else if(res_message.type === 2){ //
+            that.$notify.error({
+              title: '错误',
+              message: '对方取消回复'
             });
           } else {
             that.$message({
@@ -173,8 +180,8 @@
               type: 'success'
             });
             that.msgList.push({
-              user: res.source,
-              msg: res.text
+              user: res_message.source,
+              msg: res_message.text
             })
           }
         })
@@ -199,22 +206,77 @@
         })
       },
 
-      connect() {
-        var username = app.username;
-        console.log(username)
-        var that = this;
-        if (username != null && username !== "") {
-          if ('WebSocket' in window) {
-            ws = new WebSocket("ws://localhost:8086/socketServer/" + username);
-            this.disabled = true;
-          } else if ('MozWebSocket' in window) {
-            ws = new MozWebSocket("ws://localhost:8086/socketServer/" + username);
-            this.disabled = true;
-          } else {
-            alert("该浏览器不支持websocket");
-          }
-
-          ws.onmessage = function (evt) {
+      // connect() {
+      //   var username = app.username;
+      //   console.log(username)
+      //   var that = this;
+      //   if (username != null && username !== "") {
+      //     if ('WebSocket' in window) {
+      //       ws = new WebSocket("ws://localhost:8086/socketServer/" + username);
+      //       this.disabled = true;
+      //     } else if ('MozWebSocket' in window) {
+      //       ws = new MozWebSocket("ws://localhost:8086/socketServer/" + username);
+      //       this.disabled = true;
+      //     } else {
+      //       alert("该浏览器不支持websocket");
+      //     }
+      //
+      //     ws.onmessage = function (evt) {
+      //       console.log(evt.data);
+      //       let res = JSON.parse(evt.data)
+      //       if (res.type === 1) {
+      //         //上下线通知
+      //         app.userList = res.data;
+      //         that.$message({
+      //           type: 'success',
+      //           message: res.text
+      //         });
+      //       } else {
+      //         that.msgList.push({
+      //           user: res.source,
+      //           msg: res.text
+      //         })
+      //
+      //         if (res.sync === true) {
+      //           let name = res.source;
+      //           that.$prompt('请您回复', '来自' + name + '的同步消息:' + res.text, {
+      //             confirmButtonText: '确定',
+      //             cancelButtonText: '取消',
+      //           }).then(({value}) => {
+      //             let msg = res;
+      //             msg.response = true;
+      //             let source = msg.source;
+      //             msg.source = msg.target;
+      //             msg.target = source;
+      //             msg.text = value;
+      //             ws.send(JSON.stringify(msg))
+      //             that.$message({
+      //               type: 'success',
+      //               message: '回复成功'
+      //             });
+      //           })
+      //         }
+      //       }
+      //     };
+      //
+      //     ws.onclose = function (evt) {
+      //     };
+      //
+      //     ws.onopen = function (evt) {
+      //     };
+      //
+      //   } else {
+      //     alert("请输入您的Id");
+      //   }
+      // },
+      clickConnect(){
+        let that = this;
+        connect(this.username, function (websocket){
+          ws = websocket;
+          that.disabled = true;//按钮置灰
+        },function (){
+          console.log("连接失败")
+        },function (){},function (evt){
             console.log(evt.data);
             let res = JSON.parse(evt.data)
             if (res.type === 1) {
@@ -247,20 +309,22 @@
                     type: 'success',
                     message: '回复成功'
                   });
-                })
+                }).catch(() => {
+                  let msg = res;
+                  msg.response = true;
+                  let source = msg.source;
+                  msg.source = msg.target;
+                  msg.target = source;
+                  msg.type = 2;
+                  ws.send(JSON.stringify(msg))
+                  that.$message({
+                    type: 'info',
+                    message: '取消回复'
+                  });
+                });
               }
             }
-          };
-
-          ws.onclose = function (evt) {
-          };
-
-          ws.onopen = function (evt) {
-          };
-
-        } else {
-          alert("请输入您的Id");
-        }
+        },function (){})
       },
       clickUser(e) {
         app.target = e.currentTarget.innerText;
